syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

message Paquete{
	string tipo = 1;
	string id = 2;
	int64 valor = 3;
	string origen = 4;
	string destino = 5;
	int64 camion = 6;
	int64 intentos = 7;
	google.protobuf.Timestamp fechaentrega = 8;
} 

message ReporteDespacho{
	string id = 1;
	int64 intentos = 2;
	string tipo = 3;
	bool entregado = 4;
}

message RespuestaPedido{
	repeated ReporteDespacho reportes = 1;
	repeated bool esperando = 2;
}

message PedidoDespacho{
	repeated Paquete paquetes = 1;
}

message Disponibilidad{
	int64 camion = 1;
}

message RespuestaDisponibilidad{
	bool respuesta = 1;
} 

service ServicioCamion{
	rpc Despachar(Paquete) returns (RespuestaPedido);
	rpc Consultar(Disponibilidad) returns (RespuestaDisponibilidad);
}
